# USTC_CG_25

./: .gitmodules  README.md
Framework2D/: .clang-uml  CMakeLists.txt  README.md
Framework2D/src/assignments/: CMakeLists.txt
Framework2D/src/assignments/1_MiniDraw/: CMakeLists.txt  canvas_widget.cpp  canvas_widget.h  minidraw_window.cpp
Framework2D/src/assignments/2_ImageWarping/: warping_widget.cpp  warping_widget.h  warping_window.cpp  warping_window.h
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  Real_time_clone.cpp  Real_time_clone.h  Seamless_clone.cpp  Seamless_clone.h  poisson_window.cpp  source_image_widget.cpp  source_image_widget.h  target_image_widget.cpp  target_image_widget.h
Framework2D/src/assignments/my_GUI/: CMakeLists.txt  main.cpp  my_windows.cpp  my_windows.h
Framework2D/src/common/: image_widget.cpp
Framework3D/: README.md
Framework3D/submissions/: .gitignore  CMakeLists.txt
Framework3D/submissions/assignments/: CMakeLists.txt
Framework3D/submissions/assignments/nodes/: CMakeLists.txt  node_arap.cpp  node_boundary_mapping.cpp  node_mesh_editing.cpp  node_min_surf.cpp
Framework3D/submissions/assignments/nodes_render/: CMakeLists.txt  node_render_deferred_lighting_gl.cpp  node_render_environment_pass_gl.cpp  node_render_rasterize_gl.cpp  node_render_shadertoy_gl.cpp  node_render_shadow_mapping_gl.cpp  node_render_ssao_gl.cpp  render_node_base.h  rich_type_buffer.hpp
Framework3D/submissions/assignments/nodes_render/shaders/: blinn_phong.fs
Framework3D/submissions/assignments/utils/: CMakeLists.txt
Framework3D/submissions/changzheng_homework/: stage.usdc
Framework3D/submissions/changzheng_homework/nodes/: CMakeLists.txt  node_arap.cpp  node_boundary_mapping.cpp  node_min_surf.cpp
Framework3D/submissions/changzheng_homework/utils/: hw5.h  min_surf.h
Homeworks/: README.md
Homeworks/0_cpp_warmup/: README.md
Homeworks/1_mini_draw/: README.md
Homeworks/1_mini_draw/documents/: README.md
Homeworks/2_image_warping/: README.md
Homeworks/2_image_warping/documents/: 0_IDW.md  1_RBF.md  README.md
Homeworks/3_poisson_image_editing/: README.md
Homeworks/3_poisson_image_editing/documents/: README.md
Homeworks/4_tutte_parametrzation/: NodeIntroduction.md  README.md
Homeworks/4_tutte_parametrzation/documents/: README.md  mesh_process_example.md  openmesh.md
Homeworks/5_arap_parametrzation&_laplace_surface_editing/: README.md
Homeworks/5_arap_parametrzation&_laplace_surface_editing/5.1_arap_parameterization/: README.md
Homeworks/5_arap_parametrzation&_laplace_surface_editing/5.2_laplacian_surface_editing/: README.md
Homeworks/5_arap_parametrzation&_laplace_surface_editing/documents_1/: README.md
Homeworks/5_arap_parametrzation&_laplace_surface_editing/documents_2/: README.md
Homeworks/6_rasterization/: README.md
Homeworks/6_rasterization/docs/: README.md
Softwares/: Github.md  README.md
submissions/assignments/nodes/: node_boundary_mapping.cpp
submissions/assignments/utils/: CMakeLists.txt
(+26 files in other folders)
